--- a/PortfolioManagementSystem/appsettings.Development.json
+++ b/PortfolioManagementSystem/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Initial Catalog=PortfolioManagement;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "AllowedHosts": "*"
 }
