--- a/PortfolioManagementSystem/appsettings.json
+++ b/PortfolioManagementSystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Initial Catalog=PortfolioManagement;Integrated Security=True"
+    "Default": "Server=localhost;Initial Catalog=PortfolioManagement;Integrated Security=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
