--- a/PortfolioManagementSystem/PortfolioManagementSystem.csproj
+++ b/PortfolioManagementSystem/PortfolioManagementSystem.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Infraestructure\Infraestructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Wallet\" />
+  </ItemGroup>
+
 </Project>
