--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Manager\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.25.0" />
+  </ItemGroup>
+
 </Project>
