--- a/PortfolioManagementSystem/PortfolioManagementSystem.csproj
+++ b/PortfolioManagementSystem/PortfolioManagementSystem.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
+    <PackageReference Include="Hangfire" Version="1.8.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -24,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\WalletTransaction\Dto\" />
     <Folder Include="Controllers\Wallet\" />
   </ItemGroup>
 
