--- a/PortfolioManagementSystem/appsettings.Local.json
+++ b/PortfolioManagementSystem/appsettings.Local.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "Default": "Server=localhost;Initial Catalog=PortfolioManagement;Integrated Security=True;TrustServerCertificate=True"
   },
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb+srv://eribeiromorais18:M5zRRe3v93LDsGRv@portfoliomanagementsyst.edxtwnf.mongodb.net/",
+    "DatabaseName": "PortfolioManagementSystem"
+  },
   "AllowedHosts": "*"
 }
