--- a/PortfolioManagementSystem/PortfolioManagementSystem.csproj
+++ b/PortfolioManagementSystem/PortfolioManagementSystem.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -25,8 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\WalletTransaction\Dto\" />
-    <Folder Include="Controllers\Wallet\" />
+    <Folder Include="Helpers\Mappers\NovaPasta\" />
   </ItemGroup>
 
 </Project>
