--- a/PortfolioManagementSystem/PortfolioManagementSystem.csproj
+++ b/PortfolioManagementSystem/PortfolioManagementSystem.csproj
@@ -28,4 +28,9 @@
     <Folder Include="Helpers\Mappers\NovaPasta\" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
