--- a/PortfolioManagementSystem/appsettings.Local.json
+++ b/PortfolioManagementSystem/appsettings.Local.json
@@ -9,7 +9,7 @@
     "Default": "Server=localhost;Initial Catalog=PortfolioManagement;Integrated Security=True;TrustServerCertificate=True"
   },
   "DatabaseSettings": {
-    "ConnectionString": "mongodb+srv://eribeiromorais18:M5zRRe3v93LDsGRv@portfoliomanagementsyst.edxtwnf.mongodb.net/",
+    "ConnectionString": "mongodb://127.0.0.1:27017",
     "DatabaseName": "PortfolioManagementSystem"
   },
   "AllowedHosts": "*"
