feat: add test project

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Infraestructure/obj
 /PortfolioManagementSystem/bin/Debug
 /PortfolioManagementSystem/obj
+/PortfolioTest/bin/Debug
+/PortfolioTest/obj
